2005-01-18  Sarfraaz Ahmed <asarfraaz@novell.com>
	
	* calendar/e-cal-backend-exchange-calendar.c : Ordered the code to now
	build the proper mime message for attachments to be sent to the server.
	* calendar/e-cal-backend-exchange-tasks.c : Fixed some warnings	
	* calendar/e-cal-backend-exchange.c : Re-ordered some code and fixed
	some warnings.

2005-01-17  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Moved password expiry warning 
	period and offline sync options under one section.

2005-01-16  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c : Fixed the add_ical and
	get_changed_events functions to now geenrically fetch the attachments
	created either from Outlook or OWA.

2005-01-16  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (modify_object_with_href):
	Fixed a memory leak causing a crash on modifying an appointment.

2005-01-15  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Enabled offline sync
	check box for Exchange provider in exchange_conf_entries[].

	* calendar/e-cal-backend-exchange.c (open_calendar):
	Handling offline_sync esource property.

	* storage/exchange-account.c: (exchange_account_new): Reading 
	and storing offline sync. and password expiry warning period value set.
	(finalize): Freeing offline sync variable.
	(find_passwd_exp_period): Using the password expiry warning period
	value set instead of default value.

2005-01-12  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Added private function
	to validate user credentials.

2005-01-10  Not Zed  <NotZed@Ximian.com>

	* mail/mail-stub.c (mail_stub_read_args): long/int ->uint32.
	(mail_stub_return_data): "

	* camel/camel-stub.c (stub_send_internal): uint32 should be a
	uint32, not a long.
	(stub_send_internal): same for uint32array and int

2005-01-10  Sarfraaz Ahmed <asarfraaz@novell.com>
